DeliveryManagmentSystem1/DeliveryManagmentSystem/src/main/java/com/example/deliverymanagmentsystem/controller/errors/NoDataFoundException.java
package com.example.deliverymanagmentsystem.controller.errors;

public class NoDataFoundException extends RuntimeException{

    public NoDataFoundException(String message) {
        super(message);
    }
}